# sense

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  data_series_1640782158.csv  data_series_1640785704.csv  data_series_1640818942.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
src/: acquire.rs  main.rs  plot.rs
